# RayTracer

./: CMakeLists.txt  README.md
include/: App.h  Camera.h  Debug.h  IndexBuffer.h  Mesh.h  Shader.h  ShadowMap.h  Texture.h  Utils.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexLayout.h  VirtualWorld.h
res/kernels/: render_kernel.cl
res/shaders/: debug_fragment_shader.frag  debug_vertex_shader.vert  fragment_shader.frag  rasterizer_fragment_shader.frag  rasterizer_vertex_shader.vert  vertex_shader.vert
src/: App.cpp  Camera.cpp  IndexBuffer.cpp  Mesh.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VirtualWorld.cpp  main.cpp
